[Core] Add tests for the InstallCommand and SymlinksCommand classes

--- a/core-bundle/.gitignore
+++ b/core-bundle/.gitignore
@@ -11,6 +11,13 @@ nbproject/
 
 # Tests
 /tests/Fixtures/app/cache/contao/
+/tests/Fixtures/assets/
+/tests/Fixtures/system/cache/
+/tests/Fixtures/system/config/
+/tests/Fixtures/system/logs/
+/tests/Fixtures/system/themes/
+/tests/Fixtures/system/tmp/
+/tests/Fixtures/web/
 
 # Vendor
 /vendor/
