[Core] Exclude the Fixtures folder from the test suite

--- a/core-bundle/phpunit.xml.dist
+++ b/core-bundle/phpunit.xml.dist
@@ -10,6 +10,7 @@
     <testsuites>
         <testsuite name="Contao Core Bundle Test Suite">
             <directory>./tests</directory>
+            <exclude>./tests/Fixtures</exclude>
         </testsuite>
     </testsuites>
 
