[Core] Split the tests into two test suites and remove a redundant constructor.

--- a/core-bundle/phpunit.xml.dist
+++ b/core-bundle/phpunit.xml.dist
@@ -8,9 +8,13 @@
          bootstrap="tests/bootstrap.php"
 >
     <testsuites>
-        <testsuite name="Contao Core Bundle Test Suite">
+        <testsuite name="latest">
             <directory>./tests</directory>
+            <exclude>./tests/Contao</exclude>
             <exclude>./tests/Fixtures</exclude>
+        </testsuite>
+        <testsuite name="legacy">
+            <directory>./tests/Contao</directory>
         </testsuite>
     </testsuites>
 
