[Core] Inject the config adapter into the exception listener and drop usage of legacy classes.

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -43,6 +43,7 @@ services:
         arguments:
             - "%contao.pretty_error_screens%"
             - "@templating"
+            - "@contao.adapter.config"
 
     contao.listener.initialize_system:
         class: Contao\CoreBundle\EventListener\InitializeSystemListener
