--- a/core-bundle/.travis.yml
+++ b/core-bundle/.travis.yml
@@ -12,7 +12,7 @@ install:
     - composer install --prefer-source
 
 script:
-    - ./vendor/bin/phpunit --coverage-clover=coverage.clover
+    - ./vendor/bin/phpunit --testsuite latest --coverage-clover=coverage.clover
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
