--- a/core-bundle/src/Resources/config/cache.yml
+++ b/core-bundle/src/Resources/config/cache.yml
@@ -2,19 +2,19 @@ services:
     contao.clearer.internal_cache:
         class: Contao\CoreBundle\Cache\ContaoCacheClearer
         public: false
+        arguments:
+            - "@filesystem"
         tags:
             - { name: kernel.cache_clearer }
-        arguments:
-            - '@filesystem'
 
     contao.warmer.internal_cache:
         class: Contao\CoreBundle\Cache\ContaoCacheWarmer
         public: false
+        arguments:
+            - "@filesystem"
+            - "@contao.resource_finder"
+            - "@contao.resource_locator"
+            - "%kernel.root_dir%"
+            - "@doctrine.dbal.default_connection"
         tags:
             - { name: kernel.cache_warmer }
-        arguments:
-            - '@filesystem'
-            - '@contao.resource_finder'
-            - '@contao.resource_locator'
-            - '%kernel.root_dir%'
-            - '@doctrine.dbal.default_connection'
