--- a/core-bundle/src/Resources/config/collector.yml
+++ b/core-bundle/src/Resources/config/collector.yml
@@ -3,8 +3,8 @@ services:
         class: Contao\CoreBundle\DataCollector\ContaoDataCollector
         public: false
         arguments:
-            - '@service_container'
-            - '%kernel.bundles%'
-            - '%kernel.packages%'
+            - "@service_container"
+            - "%kernel.bundles%"
+            - "%kernel.packages%"
         tags:
             - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
