--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -1,3 +1,24 @@
+##
+# Listener priorities
+#
+# The priorities of the following listeners must be lower than the one of the
+# Symfony route listener (defaults to 32).
+#
+# - 30: ContainerScopeListener
+# - 28: RefererIdListener
+# - 26: InitializeSystemListener
+# - 24: ToggleViewListener
+# - 22: OutputFromCacheListener
+#
+# Session listener
+#
+# The priority of the session listener must be higher than the other listeners but
+# lower than the one of the Symfony session listener (defaults to 128).
+#
+# - 64: SessionListener
+#
+# Do not change the priorities unless you know what you are doing!
+##
 services:
     contao.listener.add_to_search_index:
         class: Contao\CoreBundle\EventListener\AddToSearchIndexListener
@@ -9,19 +30,17 @@ services:
         arguments:
             - "@service_container"
         tags:
-            # Priority must be higher than any other listener that uses the Contao framework and lower than the
-            # priority of the route_listener, which defaults to 32.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 30 }
             - { name: kernel.event_listener, event: kernel.finish_request, method: onKernelFinishRequest, priority: -254 }
 
     contao.listener.exception:
         class: Contao\CoreBundle\EventListener\ExceptionListener
-        tags:
-            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
         arguments:
             - "%contao.pretty_error_screens%"
             - "@templating"
             - "@contao.adapter.config"
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
 
     contao.listener.initialize_system:
         class: Contao\CoreBundle\EventListener\InitializeSystemListener
@@ -35,8 +54,6 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            # Priority must be higher than any other listener that uses the Contao framework and lower than the
-            # priority of the route_listener and the container_scope listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 26 }
             - { name: kernel.event_listener, event: console.command, method: onConsoleCommand }
 
@@ -45,7 +62,6 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            # Priority must be lower than the one of the toggle_view listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 22 }
 
     contao.listener.referer_id:
@@ -55,8 +71,6 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            # Priority must be higher than the one of the Contao initialize system listener and lower than
-            # the container_scope listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 28 }
 
     contao.listener.session:
@@ -64,8 +78,6 @@ services:
         arguments:
             - "@session"
         tags:
-            # Priority must be lower than Symfony\Bundle\FrameworkBundle\EventListener\SessionListener (default 128)
-            # but higher than the one of the Contao initialize system listener.
             - { name: kernel.event_listener, event: kernel.request, method: registerContaoAttributeBags, priority: 64 }
             - { name: kernel.event_listener, event: console.command, method: registerContaoAttributeBags, priority: 64 }
 
@@ -74,5 +86,4 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            # Priority must be lower than the one of the initialize_system listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 24 }
