--- a/core-bundle/src/Resources/config/referer.yml
+++ b/core-bundle/src/Resources/config/referer.yml
@@ -1,10 +1,10 @@
 services:
     contao.referer_id.manager:
-         class: '%security.csrf.token_manager.class%'
+         class: "%security.csrf.token_manager.class%"
          public: false
          arguments:
-            - '@contao.referer_id.token_generator'
-            - '@security.csrf.token_storage'
+            - "@contao.referer_id.token_generator"
+            - "@security.csrf.token_storage"
 
     contao.referer_id.token_generator:
          class: Contao\CoreBundle\RefererId\TokenGenerator
