--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -17,6 +17,14 @@
 #
 # - 64: SessionListener
 #
+# Exception listener
+#
+# The priority of the exception listeners must be higher than the one of the
+# Twig exception listener (defaults to 0).
+#
+# - 64: ExceptionConverterListener
+# - 32: PrettyErrorScreensListener
+#
 # Do not change the priorities unless you know what you are doing!
 ##
 services:
@@ -33,14 +41,10 @@ services:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 30 }
             - { name: kernel.event_listener, event: kernel.finish_request, method: onKernelFinishRequest, priority: -254 }
 
-    contao.listener.exception:
-        class: Contao\CoreBundle\EventListener\ExceptionListener
-        arguments:
-            - "%contao.pretty_error_screens%"
-            - "@templating"
-            - "@contao.adapter.config"
+    contao.listener.exception_converter:
+        class: Contao\CoreBundle\EventListener\ExceptionConverterListener
         tags:
-            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 64 }
 
     contao.listener.initialize_system:
         class: Contao\CoreBundle\EventListener\InitializeSystemListener
@@ -63,6 +67,15 @@ services:
             - [setContainer, ["@service_container"]]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 22 }
+
+    contao.listener.pretty_error_screens:
+        class: Contao\CoreBundle\EventListener\PrettyErrorScreenListener
+        arguments:
+            - "%contao.pretty_error_screens%"
+            - "@templating"
+            - "@contao.adapter.config"
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 32 }
 
     contao.listener.referer_id:
         class: Contao\CoreBundle\EventListener\RefererIdListener
