[Core] Set the X-Status-Code header for the response exceptions.

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -17,14 +17,6 @@
 #
 # - 64: SessionListener
 #
-# Exception listener
-#
-# The priority of the exception listeners must be higher than the one of the
-# Twig exception listener (defaults to 0).
-#
-# - 64: ExceptionConverterListener
-# - 32: PrettyErrorScreensListener
-#
 # Do not change the priorities unless you know what you are doing!
 ##
 services:
@@ -44,7 +36,7 @@ services:
     contao.listener.exception_converter:
         class: Contao\CoreBundle\EventListener\ExceptionConverterListener
         tags:
-            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 64 }
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 254 }
 
     contao.listener.initialize_system:
         class: Contao\CoreBundle\EventListener\InitializeSystemListener
@@ -75,7 +67,7 @@ services:
             - "@templating"
             - "@contao.adapter.config"
         tags:
-            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 32 }
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
 
     contao.listener.referer_id:
         class: Contao\CoreBundle\EventListener\RefererIdListener
