--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -6,7 +6,16 @@ tools:
     php_analyzer:
         dependency_paths:
             - src/Resources/contao/classes/
+            - src/Resources/contao/config/
+            - src/Resources/contao/controllers/
+            - src/Resources/contao/drivers/
+            - src/Resources/contao/elements/
+            - src/Resources/contao/forms/
             - src/Resources/contao/library/
+            - src/Resources/contao/models/
+            - src/Resources/contao/modules/
+            - src/Resources/contao/pages/
+            - src/Resources/contao/widgets/
     sensiolabs_security_checker: true
 
 filter:
