--- a/newsletter-bundle/.tx/config
+++ b/newsletter-bundle/.tx/config
@@ -3,46 +3,46 @@ host = https://www.transifex.com
 type = XLIFF
 
 [contao.v4_0-newsletter-default]
-source_file = contao/languages/en/default.xlf
+source_file = src/Resources/contao/languages/en/default.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/default.xlf
+file_filter = src/Resources/contao/languages/<lang>/default.xlf
 
 [contao.v4_0-newsletter-modules]
-source_file = contao/languages/en/modules.xlf
+source_file = src/Resources/contao/languages/en/modules.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/modules.xlf
+file_filter = src/Resources/contao/languages/<lang>/modules.xlf
 
 [contao.v4_0-newsletter-tl_member]
-source_file = contao/languages/en/tl_member.xlf
+source_file = src/Resources/contao/languages/en/tl_member.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_member.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_member.xlf
 
 [contao.v4_0-newsletter-tl_module]
-source_file = contao/languages/en/tl_module.xlf
+source_file = src/Resources/contao/languages/en/tl_module.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_module.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_module.xlf
 
 [contao.v4_0-newsletter-tl_newsletter]
-source_file = contao/languages/en/tl_newsletter.xlf
+source_file = src/Resources/contao/languages/en/tl_newsletter.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_newsletter.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_newsletter.xlf
 
 [contao.v4_0-newsletter-tl_newsletter_channel]
-source_file = contao/languages/en/tl_newsletter_channel.xlf
+source_file = src/Resources/contao/languages/en/tl_newsletter_channel.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_newsletter_channel.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_newsletter_channel.xlf
 
 [contao.v4_0-newsletter-tl_newsletter_recipients]
-source_file = contao/languages/en/tl_newsletter_recipients.xlf
+source_file = src/Resources/contao/languages/en/tl_newsletter_recipients.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_newsletter_recipients.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_newsletter_recipients.xlf
 
 [contao.v4_0-newsletter-tl_user]
-source_file = contao/languages/en/tl_user.xlf
+source_file = src/Resources/contao/languages/en/tl_user.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_user.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_user.xlf
 
 [contao.v4_0-newsletter-tl_user_group]
-source_file = contao/languages/en/tl_user_group.xlf
+source_file = src/Resources/contao/languages/en/tl_user_group.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_user_group.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_user_group.xlf
