--- a/comments-bundle/.tx/config
+++ b/comments-bundle/.tx/config
@@ -3,26 +3,26 @@ host = https://www.transifex.com
 type = XLIFF
 
 [contao.v4_0-comments-default]
-source_file = contao/languages/en/default.xlf
+source_file = src/Resources/contao/languages/en/default.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/default.xlf
+file_filter = src/Resources/contao/languages/<lang>/default.xlf
 
 [contao.v4_0-comments-modules]
-source_file = contao/languages/en/modules.xlf
+source_file = src/Resources/contao/languages/en/modules.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/modules.xlf
+file_filter = src/Resources/contao/languages/<lang>/modules.xlf
 
 [contao.v4_0-comments-tl_comments]
-source_file = contao/languages/en/tl_comments.xlf
+source_file = src/Resources/contao/languages/en/tl_comments.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_comments.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_comments.xlf
 
 [contao.v4_0-comments-tl_content]
-source_file = contao/languages/en/tl_content.xlf
+source_file = src/Resources/contao/languages/en/tl_content.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_content.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_content.xlf
 
 [contao.v4_0-comments-tl_module]
-source_file = contao/languages/en/tl_module.xlf
+source_file = src/Resources/contao/languages/en/tl_module.xlf
 source_lang = en
-file_filter = contao/languages/<lang>/tl_module.xlf
+file_filter = src/Resources/contao/languages/<lang>/tl_module.xlf
