--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -5,10 +5,14 @@
 # Symfony route listener (defaults to 32).
 #
 # - 30: ContainerScopeListener
-# - 28: RefererIdListener
-# - 26: InitializeSystemListener
-# - 24: ToggleViewListener
-# - 22: OutputFromCacheListener
+# - 20: RefererIdListener
+#
+# The priorites of the following listeners must be lower than the one of the
+# Symfony locale listener (defaults to 16).
+#
+# - 10: InitializeSystemListener
+# - 5:  ToggleViewListener
+# - 5:  OutputFromCacheListener
 #
 # Session listener
 #
@@ -59,7 +63,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 26 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 10 }
             - { name: kernel.event_listener, event: console.command, method: onConsoleCommand }
 
     contao.listener.output_from_cache:
@@ -67,7 +71,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 22 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 5 }
 
     contao.listener.pretty_error_screens:
         class: Contao\CoreBundle\EventListener\PrettyErrorScreenListener
@@ -85,7 +89,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 28 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 20 }
 
     contao.listener.response_exception:
         class: Contao\CoreBundle\EventListener\ResponseExceptionListener
@@ -105,7 +109,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 24 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 5 }
 
     contao.listener.user_session:
         class: Contao\CoreBundle\EventListener\UserSessionListener
