[Core] Use the security component to fetch the current user

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -95,6 +95,7 @@ services:
         arguments:
             - '@session'
             - '@doctrine.dbal.default_connection'
+            - '@security.token_storage'
         tags:
             # Priority must be lower than contao.listener.session (64)
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
