[Core] The Contao users must only be loaded if the correct scope is active

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -48,3 +48,6 @@ services:
     contao.security.user_provider:
         class: Contao\CoreBundle\Security\User\ContaoUserProvider
         public: false
+        calls:
+            - ['setContainer', ['@service_container']]
+
