--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -47,3 +47,7 @@ services:
         calls:
             - ['setContainer', ['@service_container']]
 
+    contao.framework_initializer:
+        class: Contao\CoreBundle\Framework\FrameworkInitializer
+        calls:
+            - ['setContainer', ['@service_container']]
