--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -6,6 +6,7 @@
 #
 # - 30: ContainerScopeListener
 # - 20: RefererIdListener
+# - 20: LocaleListener
 #
 # The priorites of the following listeners must be lower than the one of the
 # Symfony locale listener (defaults to 16).
@@ -65,6 +66,16 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 10 }
             - { name: kernel.event_listener, event: console.command, method: onConsoleCommand }
+
+    contao.listener.locale:
+        class: Contao\CoreBundle\EventListener\LocaleListener
+        arguments:
+            - '@contao.resource_finder'
+            - '%kernel.default_locale%'
+        arguments:
+            - "@service_container"
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 20 }
 
     contao.listener.output_from_cache:
         class: Contao\CoreBundle\EventListener\OutputFromCacheListener
