--- a/core-bundle/phpunit.xml.dist
+++ b/core-bundle/phpunit.xml.dist
@@ -7,6 +7,10 @@
          processIsolation="false"
          bootstrap="tests/bootstrap.php"
 >
+    <php>
+        <ini name="error_reporting" value="-1" />
+    </php>
+
     <testsuites>
         <testsuite name="latest">
             <directory>./tests</directory>
