[Core] Add missing routes to the config file

--- a/core-bundle/src/Resources/config/routing.yml
+++ b/core-bundle/src/Resources/config/routing.yml
@@ -15,3 +15,17 @@ contao_backend_redirect:
 contao_frontend:
     resource: .
     type: contao_frontend
+
+contao_root:
+    path: /
+    defaults:
+        _scope: frontend
+        _controller: ContaoCoreBundle:Frontend:index
+
+contao_catch_all:
+    path: /{_url_fragment}
+    defaults:
+        _scope: frontend
+        _controller: ContaoCoreBundle:Frontend:index
+    requirements:
+        _url_fragment: .*
