--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -11,9 +11,7 @@
 # The priorites of the following listeners must be lower than the one of the
 # Symfony locale listener (defaults to 16).
 #
-# - 10:   InitializeSystemListener
-# - -15:  ToggleViewListener
-# - -20:  OutputFromCacheListener
+# - 10: InitializeSystemListener
 #
 # Session listener
 #
@@ -82,7 +80,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: -20 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
     contao.listener.pretty_error_screens:
         class: Contao\CoreBundle\EventListener\PrettyErrorScreenListener
@@ -120,7 +118,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: -15 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
     contao.listener.user_session:
         class: Contao\CoreBundle\EventListener\UserSessionListener
