--- a/core-bundle/src/Resources/config/routing.yml
+++ b/core-bundle/src/Resources/config/routing.yml
@@ -11,7 +11,6 @@ contao_backend_redirect:
         route: contao_backend
         permanent: true
 
-# The fallback route must be the last one!
 contao_frontend:
     resource: .
     type: contao_frontend
@@ -22,6 +21,7 @@ contao_root:
         _scope: frontend
         _controller: ContaoCoreBundle:Frontend:index
 
+# The catch all route must be the last one!
 contao_catch_all:
     path: /{_url_fragment}
     defaults:
