--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -67,11 +67,12 @@ services:
 
     contao.listener.locale:
         class: Contao\CoreBundle\EventListener\LocaleListener
+        factory: [Contao\CoreBundle\EventListener\LocaleListener, createWithLocales]
         arguments:
             - '%kernel.default_locale%'
             - '%kernel.root_dir%'
-        arguments:
-            - "@service_container"
+        calls:
+            - ['setContainer', ["@service_container"]]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 20 }
 
