--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -50,11 +50,6 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 96 }
 
-    contao.listener.insecure_installation:
-        class: Contao\CoreBundle\EventListener\InsecureInstallationListener
-        tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 26 }
-
     contao.listener.initialize_system:
         class: Contao\CoreBundle\EventListener\InitializeSystemListener
         arguments:
@@ -69,6 +64,11 @@ services:
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 10 }
             - { name: kernel.event_listener, event: console.command, method: onConsoleCommand }
+
+    contao.listener.insecure_installation:
+        class: Contao\CoreBundle\EventListener\InsecureInstallationListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
 
     contao.listener.locale:
         class: Contao\CoreBundle\EventListener\LocaleListener
