--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -20,3 +20,57 @@ tools:
 filter:
     paths: [src/*]
     excluded_paths: [src/Resources/*]
+
+checks:
+    php:
+        unused_properties: true
+        unused_methods: true
+        unreachable_code: true
+        no_empty_statements: true
+        avoid_useless_overridden_methods: true
+        use_self_instead_of_fqcn: true
+        uppercase_constants: true
+        simplify_boolean_return: true
+        properties_in_camelcaps: true
+        parameters_in_camelcaps: true
+        optional_parameters_at_the_end: true
+        no_goto: true
+        newline_at_end_of_file: true
+        encourage_single_quotes: true
+        encourage_postdec_operator: true
+        classes_in_camel_caps: true
+        avoid_perl_style_comments: true
+        avoid_multiple_statements_on_same_line: true
+        parameter_doc_comments: true
+        return_doc_comments: true
+        avoid_unnecessary_concatenation: true
+        return_doc_comment_if_not_inferrable: true
+        function_in_camel_caps: true
+
+coding_style:
+    php:
+        spaces:
+            before_parentheses:
+                closure_definition: true
+        braces:
+            classes_functions:
+                class: new-line
+                function: new-line
+                closure: end-of-line
+            if:
+                opening: end-of-line
+            for:
+                opening: end-of-line
+            while:
+                opening: end-of-line
+            do_while:
+                opening: end-of-line
+            switch:
+                opening: end-of-line
+            try:
+                opening: end-of-line
+        upper_lower_casing:
+            keywords:
+                general: lower
+            constants:
+                true_false_null: lower
