--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -87,7 +87,6 @@ checks:
         naming_conventions:
             local_variable: '^[a-z][a-zA-Z0-9]*$'
             abstract_class_name: ^Abstract|Factory$
-            utility_class_name: 'Utils?$'
             constant_name: '^[A-Z][A-Z0-9]*(?:_[A-Z0-9]+)*$'
             property_name: '^[a-z][a-zA-Z0-9]*$'
             method_name: '^(?:[a-z]|__)[a-zA-Z0-9]*$'
@@ -95,7 +94,7 @@ checks:
             interface_name: '^[A-Z][a-zA-Z0-9]*Interface$'
             type_name: '^[A-Z][a-zA-Z0-9]*$'
             exception_name: '^[A-Z][a-zA-Z0-9]*Exception$'
-            isser_method_name: '^(?:is|has|should|may|supports)'
+            isser_method_name: '^(?:is|has|grants|should|may|supports)'
         more_specific_types_in_doc_comments: true
         missing_arguments: true
         method_calls_on_non_object: true
