--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -86,7 +86,8 @@ checks:
         newline_at_end_of_file: true
         naming_conventions:
             local_variable: '^[a-z][a-zA-Z0-9]*$'
-            abstract_class_name: ^Abstract|Factory$
+            abstract_class_name: '^Abstract|Factory$'
+            utility_class_name: '^[A-Z][a-zA-Z0-9]*$'
             constant_name: '^[A-Z][A-Z0-9]*(?:_[A-Z0-9]+)*$'
             property_name: '^[a-z][a-zA-Z0-9]*$'
             method_name: '^(?:[a-z]|__)[a-zA-Z0-9]*$'
@@ -94,7 +95,7 @@ checks:
             interface_name: '^[A-Z][a-zA-Z0-9]*Interface$'
             type_name: '^[A-Z][a-zA-Z0-9]*$'
             exception_name: '^[A-Z][a-zA-Z0-9]*Exception$'
-            isser_method_name: '^(?:is|has|grants|should|may|supports)'
+            isser_method_name: '^(?:is|can|has|grants|should|may|supports)'
         more_specific_types_in_doc_comments: true
         missing_arguments: true
         method_calls_on_non_object: true
