[Core] The Container is always required to boot the framework

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -49,5 +49,5 @@ services:
 
     contao.framework_initializer:
         class: Contao\CoreBundle\Framework\FrameworkInitializer
-        calls:
-            - ['setContainer', ['@service_container']]
+        arguments:
+            - '@service_container'
