--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -44,8 +44,9 @@ services:
     contao.security.user_provider:
         class: Contao\CoreBundle\Security\User\ContaoUserProvider
         public: false
-        calls:
-            - ['setContainer', ['@service_container']]
+        arguments:
+            - '@contao.framework'
+            - '@service_container'
 
     contao.framework:
         class: Contao\CoreBundle\ContaoFramework
