[Core] Re-add the console listener until #234 has been merged.

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -117,6 +117,8 @@ services:
             - "@session"
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 64 }
+            # FIXME: remove
+            - { name: kernel.event_listener, event: console.command, method: onKernelRequest, priority: 64 }
 
     contao.listener.toggle_view:
         class: Contao\CoreBundle\EventListener\ToggleViewListener
