[Core] Add the AbstractUserAwareListener class.

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -123,10 +123,10 @@ services:
     contao.listener.store_referer:
         class: Contao\CoreBundle\EventListener\StoreRefererListener
         arguments:
-            - '@session'
-            - '@security.token_storage'
+            - "@session"
         calls:
             - [setContainer, ["@service_container"]]
+            - [setTokenStorage, ["@security.token_storage"]]
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
 
@@ -140,11 +140,11 @@ services:
     contao.listener.user_session:
         class: Contao\CoreBundle\EventListener\UserSessionListener
         arguments:
-            - '@session'
-            - '@doctrine.dbal.default_connection'
-            - '@security.token_storage'
+            - "@session"
+            - "@doctrine.dbal.default_connection"
         calls:
             - [setContainer, ["@service_container"]]
+            - [setTokenStorage, ["@security.token_storage"]]
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
