--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -16,6 +16,7 @@
         "michelf/php-markdown": "~1.4",
         "oyejorge/less.php": "~1.7",
         "phpspec/php-diff": "~1.0",
+        "sensio/framework-extra-bundle": "~3.0",
         "simplepie/simplepie": "~1.3",
         "symfony/console": "~2.6",
         "symfony/finder": "~2.6",
