--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -8,6 +8,18 @@ services:
         tags:
             - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
 
+    contao.framework:
+        class: Contao\CoreBundle\ContaoFramework
+        arguments:
+            - "@service_container"
+            - "@router"
+            - "@session"
+            - "%kernel.root_dir%"
+            - "@security.csrf.token_manager"
+            - "%contao.csrf_token_name%"
+            - "@contao.adapter.config"
+            - "%contao.error_level%"
+
     contao.referer_id.manager:
          class: "%security.csrf.token_manager.class%"
          public: false
@@ -47,15 +59,3 @@ services:
         arguments:
             - "@contao.framework"
             - "@service_container"
-
-    contao.framework:
-        class: Contao\CoreBundle\ContaoFramework
-        arguments:
-            - "@request_stack"
-            - "@router"
-            - "@session"
-            - "%kernel.root_dir%"
-            - "@security.csrf.token_manager"
-            - "%contao.csrf_token_name%"
-            - "@contao.adapter.config"
-            - "%contao.error_level%"
