--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -11,7 +11,6 @@ services:
     contao.framework:
         class: Contao\CoreBundle\ContaoFramework
         arguments:
-            - "@service_container"
             - "@router"
             - "@session"
             - "%kernel.root_dir%"
@@ -19,6 +18,9 @@ services:
             - "%contao.csrf_token_name%"
             - "@contao.adapter.config"
             - "%contao.error_level%"
+            - "@request_stack"
+        calls:
+            - ["setContainer", ["@service_container"]]
 
     contao.referer_id.manager:
          class: "%security.csrf.token_manager.class%"
@@ -58,4 +60,5 @@ services:
         public: false
         arguments:
             - "@contao.framework"
-            - "@service_container"
+        calls:
+            - ["setContainer", ["@service_container"]]
