[Core] Fix the Contao cache warmer and all corrupt tests.

--- a/core-bundle/src/Resources/config/cache.yml
+++ b/core-bundle/src/Resources/config/cache.yml
@@ -16,5 +16,6 @@ services:
             - "@contao.resource_locator"
             - "%kernel.root_dir%"
             - "@doctrine.dbal.default_connection"
+            - "@contao.framework"
         tags:
             - { name: kernel.cache_warmer }
