[Core] Register the commands as service and fix all broken tests.

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -83,6 +83,7 @@ services:
             - "%contao.pretty_error_screens%"
             - "@templating"
             - "@contao.adapter.config"
+            - "@contao.framework"
         tags:
             - { name: kernel.event_listener, event: kernel.exception, method: onKernelException, priority: 32 }
 
