--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -30,7 +30,7 @@
         "contao-components/colorbox": "~1.5",
         "contao-components/colorpicker": "~1.4",
         "contao-components/compass": "~0.12",
-        "contao-components/contao": "^4.1.0",
+        "contao-components/contao": "^4.1.1",
         "contao-components/datepicker": "~2.2",
         "contao-components/dropzone": "~3.10",
         "contao-components/highlight": "~8.2",
@@ -43,7 +43,7 @@
         "contao-components/respimage": "~1.1",
         "contao-components/simplemodal": "~1.2",
         "contao-components/stylect": "~3.4",
-        "contao-components/swipe": "~2.0",
+        "contao-components/swipe": "^2.0.3",
         "contao-components/tablesort": "~3.4",
         "contao-components/tablesorter": "~2.0",
         "contao-components/tinymce4": "~4.1"
