[Core] Throw an exception if required services have not been set and inject them in the constructor if possible.

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -59,6 +59,5 @@ services:
         class: Contao\CoreBundle\Security\User\ContaoUserProvider
         public: false
         arguments:
+            - "@service_container"
             - "@contao.framework"
-        calls:
-            - ["setContainer", ["@service_container"]]
