--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -63,7 +63,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "4.0.x-dev"
+            "dev-develop": "4.1.x-dev",
+            "dev-release/4.0.0": "4.0.x-dev"
         }
     },
     "prefer-stable": true,
