--- a/faq-bundle/composer.json
+++ b/faq-bundle/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "contao/faq-bundle",
-    "type": "library",
+    "type": "symfony-bundle",
     "description": "Contao 4 FAQ bundle",
     "license": "LGPL-3.0+",
     "authors": [
