[Core] Change the package type to "symfony-bundle" (see #276).

--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "contao/core-bundle",
-    "type": "library",
+    "type": "symfony-bundle",
     "description": "Contao 4 core bundle",
     "license": "LGPL-3.0+",
     "authors": [
