--- a/core-bundle/.travis.yml
+++ b/core-bundle/.travis.yml
@@ -4,15 +4,17 @@ php:
     - "5.4"
     - "5.5"
     - "5.6"
+    - "hhvm"
+    - "nightly"
 
 sudo: false
 
-install:
-    - composer self-update
-    - composer install --prefer-source
+before_script:
+    - composer selfupdate
+    - composer install
 
 script:
-    - ./vendor/bin/phpunit --testsuite latest --coverage-clover=coverage.clover
+    - ./vendor/bin/phpunit --testsuite latest --verbose --coverage-clover=coverage.clover
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
