--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -11,20 +11,20 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "doctrine/doctrine-bundle": "~1.3",
+        "symfony/framework-bundle": "~2.7",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/console": "~2.7",
+        "symfony/finder": "~2.7",
+        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
+        "twig/twig": "~1.18",
+        "doctrine/doctrine-bundle": "~1.4",
         "leafo/scssphp": "~0.1",
         "michelf/php-markdown": "~1.4",
         "oyejorge/less.php": "~1.7",
         "phpspec/php-diff": "~1.0",
-        "sensio/framework-extra-bundle": "~3.0",
         "simplepie/simplepie": "~1.3",
-        "symfony/console": "~2.6",
-        "symfony/finder": "~2.6",
-        "symfony/framework-bundle": "~2.6",
-        "symfony/swiftmailer-bundle": "~2.3",
         "tecnick.com/tcpdf": "~6.0",
         "true/punycode": "~1.0",
-        "twig/twig": "~1.12,>=1.12.3",
         "contao-components/ace": "~1.1",
         "contao-components/chosen": "~1.0",
         "contao-components/colorbox": "~1.5",
