[Core] Use @twig instead of @templating now that we have Symfony 2.7 (see #202).

--- a/core-bundle/src/Resources/config/listener.yml
+++ b/core-bundle/src/Resources/config/listener.yml
@@ -81,7 +81,7 @@ services:
         class: Contao\CoreBundle\EventListener\PrettyErrorScreenListener
         arguments:
             - "%contao.pretty_error_screens%"
-            - "@templating"
+            - "@twig"
             - "@contao.adapter.config"
             - "@contao.framework"
         tags:
