--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -25,7 +25,7 @@
         "simplepie/simplepie": "~1.3",
         "tecnick.com/tcpdf": "~6.0",
         "true/punycode": "~1.0",
-        "contao-components/ace": "~1.1",
+        "contao-components/ace": "^1.1.9",
         "contao-components/chosen": "~1.0",
         "contao-components/colorbox": "~1.5",
         "contao-components/colorpicker": "~1.4",
