[Core] Added unit tests for Widget::getPost

--- a/core-bundle/phpunit.xml.dist
+++ b/core-bundle/phpunit.xml.dist
@@ -18,6 +18,7 @@
             <exclude>./tests/Contao/GdImageTest.php</exclude>
             <exclude>./tests/Contao/ImageTest.php</exclude>
             <exclude>./tests/Contao/PictureTest.php</exclude>
+            <exclude>./tests/Contao/WidgetTest.php</exclude>
             <exclude>./tests/Fixtures</exclude>
         </testsuite>
         <testsuite name="legacy">
@@ -25,6 +26,7 @@
             <file>./tests/Contao/GdImageTest.php</file>
             <file>./tests/Contao/ImageTest.php</file>
             <file>./tests/Contao/PictureTest.php</file>
+            <file>./tests/Contao/WidgetTest.php</file>
         </testsuite>
     </testsuites>
 
