--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -49,7 +49,8 @@
         "contao-components/tinymce4": "~4.1"
     },
     "require-dev": {
-        "composer/composer": "dev-master",
+        "composer/composer": "~1.0",
+        "fabpot/php-cs-fixer": "~1.8",
         "phpunit/phpunit": "~4.5",
         "symfony/phpunit-bridge": "~2.7"
     },
