--- a/faq-bundle/.tx/config
+++ b/faq-bundle/.tx/config
@@ -2,37 +2,37 @@
 host = https://www.transifex.com
 type = XLIFF
 
-[contao.v4_0-faq-default]
+[contao-faq-bundle.v4_0-default]
 source_file = src/Resources/contao/languages/en/default.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/default.xlf
 
-[contao.v4_0-faq-modules]
+[contao-faq-bundle.v4_0-modules]
 source_file = src/Resources/contao/languages/en/modules.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/modules.xlf
 
-[contao.v4_0-faq-tl_faq]
+[contao-faq-bundle.v4_0-tl_faq]
 source_file = src/Resources/contao/languages/en/tl_faq.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_faq.xlf
 
-[contao.v4_0-faq-tl_faq_category]
+[contao-faq-bundle.v4_0-tl_faq_category]
 source_file = src/Resources/contao/languages/en/tl_faq_category.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_faq_category.xlf
 
-[contao.v4_0-faq-tl_module]
+[contao-faq-bundle.v4_0-tl_module]
 source_file = src/Resources/contao/languages/en/tl_module.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_module.xlf
 
-[contao.v4_0-faq-tl_user]
+[contao-faq-bundle.v4_0-tl_user]
 source_file = src/Resources/contao/languages/en/tl_user.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_user.xlf
 
-[contao.v4_0-faq-tl_user_group]
+[contao-faq-bundle.v4_0-tl_user_group]
 source_file = src/Resources/contao/languages/en/tl_user_group.xlf
 source_lang = en
 file_filter = src/Resources/contao/languages/<lang>/tl_user_group.xlf
