[Installation] Add the table update routines.

--- a/installation-bundle/composer.json
+++ b/installation-bundle/composer.json
@@ -14,6 +14,9 @@
         "symfony/framework-bundle": "~2.7",
         "contao/core-bundle": "~4.0"
     },
+    "require-dev": {
+        "fabpot/php-cs-fixer": "~1.8"
+    },
     "conflict": {
         "contao/core": "*"
     },
