[Core] Fix various minor issues.

--- a/core-bundle/phpunit.xml.dist
+++ b/core-bundle/phpunit.xml.dist
@@ -14,19 +14,11 @@
     <testsuites>
         <testsuite name="latest">
             <directory>./tests</directory>
-            <exclude>./tests/Contao/EnvironmentTest.php</exclude>
-            <exclude>./tests/Contao/GdImageTest.php</exclude>
-            <exclude>./tests/Contao/ImageTest.php</exclude>
-            <exclude>./tests/Contao/PictureTest.php</exclude>
-            <exclude>./tests/Contao/WidgetTest.php</exclude>
+            <exclude>./tests/Contao</exclude>
             <exclude>./tests/Fixtures</exclude>
         </testsuite>
         <testsuite name="legacy">
-            <file>./tests/Contao/EnvironmentTest.php</file>
-            <file>./tests/Contao/GdImageTest.php</file>
-            <file>./tests/Contao/ImageTest.php</file>
-            <file>./tests/Contao/PictureTest.php</file>
-            <file>./tests/Contao/WidgetTest.php</file>
+            <directory>./tests/Contao</directory>
         </testsuite>
     </testsuites>
 
