[Installation] Add a branch alias for dev-master.

--- a/installation-bundle/composer.json
+++ b/installation-bundle/composer.json
@@ -27,6 +27,7 @@
     },
     "extra": {
         "branch-alias": {
+            "dev-master": "4.0.x-dev",
             "dev-develop": "4.1.x-dev"
         }
     }
