[Core] Add a branch alias for the hotfix/4.0.2 branch.

--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -67,7 +67,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-develop": "4.1.x-dev"
+            "dev-develop": "4.1.x-dev",
+            "dev-hotfix/4.0.2": "4.0.x-dev"
         }
     },
     "prefer-stable": true
