[Core] Add the PHP extensions required for the image tests in Appveyor.

--- a/core-bundle/appveyor.yml
+++ b/core-bundle/appveyor.yml
@@ -11,8 +11,19 @@ install:
   - copy php.ini-production php.ini
   - echo date.timezone="UTC" >> php.ini
   - echo extension_dir=ext >> php.ini
-  - echo extension=php_openssl.dll >> php.ini
+  - echo extension=php_bz2.dll >> php.ini
+  - echo extension=php_curl.dll >> php.ini
+  - echo extension=php_exif.dll >> php.ini
+  - echo extension=php_gd2.dll >> php.ini
+  - echo extension=php_intl.dll >> php.ini
   - echo extension=php_mbstring.dll >> php.ini
+  - echo extension=php_mysqli.dll >> php.ini
+  - echo extension=php_openssl.dll >> php.ini
+  - echo extension=php_pdo_mysql.dll >> php.ini
+  - echo extension=php_soap.dll >> php.ini
+  - echo extension=php_sockets.dll >> php.ini
+  - echo extension=php_xmlrpc.dll >> php.ini
+  - echo extension=php_xsl.dll >> php.ini
   - SET PATH=c:\tools\php;%PATH%
   - cd c:\projects\contao
   - php -r "readfile('http://getcomposer.org/installer');" | php
