[Core] Configured the adapter factory in services.yml

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -1,4 +1,7 @@
 services:
+    contao.adapter_factory
+        class: Contao\CoreBundle\Adapter\AdapterFactory
+        
     contao.data_collector:
         class: Contao\CoreBundle\DataCollector\ContaoDataCollector
         public: false
